Upgrade to JDK 24